// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Favorites should render correctly Favorites should render correctly with empty bookmarkOffersByCity 1`] = `
Array [
  <div
    className="page"
  >
    <header
      className="header"
    >
      <div
        className="container"
      >
        <div
          className="header__wrapper"
        >
          <div
            className="header__left"
          >
            <a
              className="header__logo-link header__logo-link--active"
              href="/"
              onClick={[Function]}
            >
              <img
                alt="6 cities logo"
                className="header__logo"
                height="41"
                src="/img/logo.svg"
                width="81"
              />
            </a>
          </div>
          <nav
            className="header__nav"
          >
            <ul
              className="header__nav-list"
            >
              <li
                className="header__nav-item user"
              >
                <a
                  className="header__nav-link header__nav-link--profile"
                  href="/login"
                  onClick={[Function]}
                >
                  <div
                    className="header__avatar-wrapper user__avatar-wrapper"
                  />
                  <span
                    className="header__login"
                  >
                    Sign in
                  </span>
                </a>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </header>
    <main
      className="page__main page__main--favorites page__main--favorites-empty"
    >
      <div
        className="page__favorites-container container"
      >
        <section
          className="favorites favorites--empty"
        >
          <h1
            className="visually-hidden"
          >
            Favorites (empty)
          </h1>
          <div
            className="favorites__status-wrapper"
          >
            <b
              className="favorites__status"
            >
              Nothing yet saved.
            </b>
            <p
              className="favorites__status-description"
            >
              Save properties to narrow down search or plan yor future trips.
            </p>
          </div>
        </section>
      </div>
    </main>
    <footer
      className="footer container"
    >
      <a
        className="footer__logo-link footer__logo-link--active"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="6 cities logo"
          className="footer__logo"
          height="33"
          src="img/logo.svg"
          width="64"
        />
      </a>
    </footer>
  </div>,
  ")",
]
`;

exports[`Favorites should render correctly Favorites should render correctly with fill bookmarkOffersByCity 1`] = `
Array [
  <div
    className="page"
  >
    <header
      className="header"
    >
      <div
        className="container"
      >
        <div
          className="header__wrapper"
        >
          <div
            className="header__left"
          >
            <a
              className="header__logo-link header__logo-link--active"
              href="/"
              onClick={[Function]}
            >
              <img
                alt="6 cities logo"
                className="header__logo"
                height="41"
                src="/img/logo.svg"
                width="81"
              />
            </a>
          </div>
          <nav
            className="header__nav"
          >
            <ul
              className="header__nav-list"
            >
              <li
                className="header__nav-item user"
              >
                <a
                  className="header__nav-link header__nav-link--profile"
                  href="/login"
                  onClick={[Function]}
                >
                  <div
                    className="header__avatar-wrapper user__avatar-wrapper"
                  />
                  <span
                    className="header__login"
                  >
                    Sign in
                  </span>
                </a>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </header>
    <main
      className="page__main page__main--favorites"
    >
      <div
        className="page__favorites-container container"
      >
        <section
          className="favorites"
        >
          <h1
            className="favorites__title"
          >
            Saved listing
          </h1>
          <ul
            className="favorites__list"
          >
            <li
              className="favorites__locations-items"
            >
              <div
                className="favorites__locations locations locations--current"
              >
                <div
                  className="locations__item"
                >
                  <a
                    className="locations__item-link"
                    href="#"
                  >
                    <span>
                      City1
                    </span>
                  </a>
                </div>
              </div>
              <div
                className="favorites__places"
              >
                <article
                  className="favorites__card place-card"
                >
                  <div
                    className="favorites__image-wrapper place-card__image-wrapper"
                  >
                    <a
                      className="place-card__img-link"
                      href="/offer/1"
                      onClick={[Function]}
                    >
                      <img
                        alt="Place image"
                        className="place-card__image"
                        height="110"
                        src="small-img-url"
                        width="150"
                      />
                    </a>
                  </div>
                  <div
                    className="place-card__info favorites__card-info"
                  >
                    <div
                      className="place-card__price-wrapper"
                    >
                      <div
                        className="place-card__price"
                      >
                        <b
                          className="place-card__price-value"
                        >
                          €
                          493
                        </b>
                        <span
                          className="place-card__price-text"
                        >
                          / night
                        </span>
                      </div>
                      <a
                        className="place-card__bookmark-button
         place-card__bookmark-button--active button"
                        href="/login"
                        onClick={[Function]}
                        type="button"
                      >
                        <svg
                          className="place-card__bookmark-icon"
                          height="19"
                          width="18"
                        >
                          <use
                            xlinkHref="#icon-bookmark"
                          />
                        </svg>
                        <span
                          className="visually-hidden"
                        >
                          In
                           bookmarks
                        </span>
                      </a>
                    </div>
                    <div
                      className="place-card__rating rating"
                    >
                      <div
                        className="place-card__stars rating__stars"
                      >
                        <span
                          style={
                            Object {
                              "width": "76%",
                            }
                          }
                        />
                        <span
                          className="visually-hidden"
                        >
                          Rating
                        </span>
                      </div>
                    </div>
                    <h2
                      className="place-card__name"
                    >
                      <a
                        href="/offer/1"
                        onClick={[Function]}
                      >
                        title
                      </a>
                    </h2>
                    <p
                      className="place-card__type"
                    >
                      type
                    </p>
                  </div>
                </article>
                <article
                  className="favorites__card place-card"
                >
                  <div
                    className="favorites__image-wrapper place-card__image-wrapper"
                  >
                    <a
                      className="place-card__img-link"
                      href="/offer/4"
                      onClick={[Function]}
                    >
                      <img
                        alt="Place image"
                        className="place-card__image"
                        height="110"
                        src="small-img-url"
                        width="150"
                      />
                    </a>
                  </div>
                  <div
                    className="place-card__info favorites__card-info"
                  >
                    <div
                      className="place-card__price-wrapper"
                    >
                      <div
                        className="place-card__price"
                      >
                        <b
                          className="place-card__price-value"
                        >
                          €
                          123
                        </b>
                        <span
                          className="place-card__price-text"
                        >
                          / night
                        </span>
                      </div>
                      <a
                        className="place-card__bookmark-button
         place-card__bookmark-button--active button"
                        href="/login"
                        onClick={[Function]}
                        type="button"
                      >
                        <svg
                          className="place-card__bookmark-icon"
                          height="19"
                          width="18"
                        >
                          <use
                            xlinkHref="#icon-bookmark"
                          />
                        </svg>
                        <span
                          className="visually-hidden"
                        >
                          In
                           bookmarks
                        </span>
                      </a>
                    </div>
                    <div
                      className="place-card__rating rating"
                    >
                      <div
                        className="place-card__stars rating__stars"
                      >
                        <span
                          style={
                            Object {
                              "width": "76%",
                            }
                          }
                        />
                        <span
                          className="visually-hidden"
                        >
                          Rating
                        </span>
                      </div>
                    </div>
                    <h2
                      className="place-card__name"
                    >
                      <a
                        href="/offer/4"
                        onClick={[Function]}
                      >
                        title
                      </a>
                    </h2>
                    <p
                      className="place-card__type"
                    >
                      type
                    </p>
                  </div>
                </article>
              </div>
            </li>
            <li
              className="favorites__locations-items"
            >
              <div
                className="favorites__locations locations locations--current"
              >
                <div
                  className="locations__item"
                >
                  <a
                    className="locations__item-link"
                    href="#"
                  >
                    <span>
                      City3
                    </span>
                  </a>
                </div>
              </div>
              <div
                className="favorites__places"
              >
                <article
                  className="favorites__card place-card"
                >
                  <div
                    className="favorites__image-wrapper place-card__image-wrapper"
                  >
                    <a
                      className="place-card__img-link"
                      href="/offer/8"
                      onClick={[Function]}
                    >
                      <img
                        alt="Place image"
                        className="place-card__image"
                        height="110"
                        src="small-img-url"
                        width="150"
                      />
                    </a>
                  </div>
                  <div
                    className="place-card__info favorites__card-info"
                  >
                    <div
                      className="place-card__price-wrapper"
                    >
                      <div
                        className="place-card__price"
                      >
                        <b
                          className="place-card__price-value"
                        >
                          €
                          383
                        </b>
                        <span
                          className="place-card__price-text"
                        >
                          / night
                        </span>
                      </div>
                      <a
                        className="place-card__bookmark-button
         place-card__bookmark-button--active button"
                        href="/login"
                        onClick={[Function]}
                        type="button"
                      >
                        <svg
                          className="place-card__bookmark-icon"
                          height="19"
                          width="18"
                        >
                          <use
                            xlinkHref="#icon-bookmark"
                          />
                        </svg>
                        <span
                          className="visually-hidden"
                        >
                          In
                           bookmarks
                        </span>
                      </a>
                    </div>
                    <div
                      className="place-card__rating rating"
                    >
                      <div
                        className="place-card__stars rating__stars"
                      >
                        <span
                          style={
                            Object {
                              "width": "76%",
                            }
                          }
                        />
                        <span
                          className="visually-hidden"
                        >
                          Rating
                        </span>
                      </div>
                    </div>
                    <h2
                      className="place-card__name"
                    >
                      <a
                        href="/offer/8"
                        onClick={[Function]}
                      >
                        title
                      </a>
                    </h2>
                    <p
                      className="place-card__type"
                    >
                      type
                    </p>
                  </div>
                </article>
              </div>
            </li>
          </ul>
        </section>
      </div>
    </main>
    <footer
      className="footer container"
    >
      <a
        className="footer__logo-link footer__logo-link--active"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="6 cities logo"
          className="footer__logo"
          height="33"
          src="img/logo.svg"
          width="64"
        />
      </a>
    </footer>
  </div>,
  ")",
]
`;
